src/objects/Construction__c.object
<CustomObject>
    <description>Master-Detail to the Project to summarize Stage 3 and Stage 4</description>
    <fields>
        <fullName>Actual_Certified_Mechanical_Completion__c</fullName>
        <label>Actual Certified Mechanical Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Final_Completion__c</fullName>
        <formula>Project__r.Actual_Final_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Final Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Mechanical_Completion__c</fullName>
        <formula>Project__r.Mechanical_Installed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Mechanical Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_PTO_Date__c</fullName>
        <formula>Project__r.Actual_PTO_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Substantial_Completion__c</fullName>
        <formula>Project__r.Actual_Substantial_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Substantial Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Final_Completion__c</fullName>
        <formula>Project__r.Planned_Final_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Final Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Anticipated_Substantial_Completion__c</fullName>
        <formula>Project__r.Anticipated_Substantial_Completion__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Anticipated Substantial Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Award__c</fullName>
        <label>Bid Award</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Cost_Watt__c</fullName>
        <label>Bid Cost/Watt ($/MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Cost__c</fullName>
        <label>Bid Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Bid_Date__c</fullName>
        <label>Bid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Due__c</fullName>
        <label>Bid Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Set_Design_Engineering__c</fullName>
        <label>Bid Set Design/Engineering</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bid_Yield_kWh_kWp_yr__c</fullName>
        <label>Bid Yield (kWh/kWp/yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Act__c</fullName>
        <label>Building Permit Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Actual_Date__c</fullName>
        <formula>Project__r.Building_Permit_Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Anticipated_Date__c</fullName>
        <formula>Project__r.Building_Permit_Anticipated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Building Permit Anticipated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Building_Permit_Est__c</fullName>
        <label>Building Permit Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CO2_Saved_per_Year_Tons__c</fullName>
        <formula>(1000)*(1.10231)*(0.00074422152)* Energy_Generated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated using the recommended EPA Emission Factor Equation</inlineHelpText>
        <label>CO2 Saved per Year (Tons)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cars_Off_the_Road__c</fullName>
        <formula>((( CO2_Saved_per_Year_Tons__c )/1.10231) / (4.675442623173056))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Passenger vehicles driven for one year</inlineHelpText>
        <label>Cars Off the Road</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Certified_Mechanical_Completion_Act__c</fullName>
        <label>Certified Mechanical Completion Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Orders__c</fullName>
        <label>Change Orders</label>
        <summarizedField>Change_Order__c.Change_Order_Amount__c</summarizedField>
        <summaryForeignKey>Change_Order__c.Construction__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Civil_Site_Engineer_Company__c</fullName>
        <label>Civil/Site Engineer Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Civil_Site_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Civil/Site Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction (Civil/Site Engineer)</relationshipLabel>
        <relationshipName>Construction1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Cost_Watt__c</fullName>
        <label>Contract Cost/Watt ($/MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Cost__c</fullName>
        <label>Contract Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Date__c</fullName>
        <label>Contract Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Executed__c</fullName>
        <formula>Project__r.EPC_Contract_Negotiations__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_System_Size_MWdc__c</fullName>
        <label>Contract System Size (MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Yield__c</fullName>
        <label>Contract Yield (kWh/kWp/yr)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EPC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EPC Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Construction</relationshipLabel>
        <relationshipName>Construction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EPC_Bid_Evaluation__c</fullName>
        <label>EPC Bid Evaluation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPC_Bid_Review_Meeting__c</fullName>
        <label>EPC Bid Review Meeting</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_Contract_Executed__c</fullName>
        <label>EPC Contract Executed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EPC_Costs__c</fullName>
        <formula>HYPERLINK(&quot;/00O0a000005FJBs?&quot;&amp;Id,&quot;EPC Summary&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EPC Costs</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPC__c</fullName>
        <inlineHelpText>This list may be edited for future EPC&apos;s</inlineHelpText>
        <label>EPC</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Conti Enterprises</fullName>
                </value>
                <value>
                    <fullName>M+W Group</fullName>
                </value>
                <value>
                    <fullName>Pro-Tech Energy Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Electrical_Engineer_Company__c</fullName>
        <label>Electrical Engineer Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Electrical Engineer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction</relationshipLabel>
        <relationshipName>Construction</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Act__c</fullName>
        <label>Electrical Permit Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Actual_Date__c</fullName>
        <formula>Project__r.Electrical_Permit_Actual_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Permit Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Anticipated_Date__c</fullName>
        <formula>Project__r.Electrical_Permit_Anticipated_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Electrical Permit Anticipated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Permit_Est__c</fullName>
        <label>Electrical Permit Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Energy_Generated__c</fullName>
        <formula>(Final_Yield_kWh_kWp_yr__c * Project__r.Total_MWDC__c) / 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Energy Generated (MWH/year)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_PTO_Date__c</fullName>
        <formula>Project__r.Estimated_PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Factoid_Report__c</fullName>
        <formula>HYPERLINK(&quot;/00O0a000005FMmh&quot;, &quot;All Factoids&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Factoid Report</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Act__c</fullName>
        <label>Final Completion Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Completion_Est__c</fullName>
        <label>Final Completion Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Cost_Date__c</fullName>
        <label>Final Cost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Cost_Watt__c</fullName>
        <formula>Final_Cost__c /( Project__r.Total_MWDC__c *1000)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Cost/Watt ($/MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_Cost__c</fullName>
        <formula>Contract_Cost__c + Change_Orders__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Final Cost ($)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Final_EPC_Bids_Received__c</fullName>
        <label>Final EPC Bids Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_EPC_Bids_Solicited__c</fullName>
        <label>Final EPC Bids Solicited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_NTP_Act__c</fullName>
        <label>Final NTP Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_SWPPP_Act__c</fullName>
        <label>Final SWPPP Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_System_Size_MWdc__c</fullName>
        <label>Final System Size (MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Yield_kWh_kWp_yr__c</fullName>
        <label>Final Yield (kWh/kWp/yr)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Homes_Powered__c</fullName>
        <formula>(Energy_Generated__c * 1000) / 10766</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated using the average residential utility customer kWh usage, acquired from the U.S. Energy Information Administration</inlineHelpText>
        <label>Homes Powered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Jobs_at_Peak__c</fullName>
        <inlineHelpText>Provided by the EPC</inlineHelpText>
        <label>Jobs at Peak</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Limited_NTP_or_DSA__c</fullName>
        <label>Limited NTP or DSA</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Completion_Act__c</fullName>
        <label>Mechanical Completion Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mechanical_Completion_Est__c</fullName>
        <label>Mechanical Completion Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Modules_Completion__c</fullName>
        <label>Modules Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPDES_Permit_Act__c</fullName>
        <label>NPDES Permit Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NPDES_Permit_Est__c</fullName>
        <label>NPDES Permit Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Act__c</fullName>
        <label>PTO Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PTO_Est__c</fullName>
        <label>PTO Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Potential_Cost_Impact__c</fullName>
        <label>Potential Cost Impact</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pre_bid__c</fullName>
        <label>Pre-bid</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Probability__c</fullName>
        <label>Probability</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Production_Test__c</fullName>
        <label>Production Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Footprint__c</fullName>
        <label>Project Footprint (Acres)</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <label>Project Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project Name</label>
        <referenceTo>MPM4_BASE__Milestone1_Project__c</referenceTo>
        <relationshipLabel>Construction</relationshipLabel>
        <relationshipName>Construction</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QA_QC_Civil_Site_Company__c</fullName>
        <label>QA/QC Civil/Site Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_QC_Civil_Site_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA/QC Civil/Site Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction (QA/QC Civil/Site Consultant)</relationshipLabel>
        <relationshipName>Construction4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_QC_Civil_Site_Inspector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA/QC Civil/Site Inspector</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction (QA/QC Civil/Site Inspector)</relationshipLabel>
        <relationshipName>Construction5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_QC_Electrical_Company__c</fullName>
        <label>QA/QC Electrical Company</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_QC_Electrical_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA/QC Electrical Consultant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction (QA/QC Electrical Consultant)</relationshipLabel>
        <relationshipName>Construction2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_QC_Electrical_Inspector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA/QC Electrical Inspector</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Construction (QA/QC Electrical Inspector)</relationshipLabel>
        <relationshipName>Construction3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RFP_Issued_Date__c</fullName>
        <formula>Project__r.RFP_RFQ__r.RFP_Issue_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RFP Issued Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Racking_Completion__c</fullName>
        <label>Racking Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Award_RTA_Approved__c</fullName>
        <label>Recommendation to Award (RTA) Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recommendation_to_Award_RTA__c</fullName>
        <label>Recommendation to Award (RTA)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Req_Cert_Mechanical_Completion__c</fullName>
        <formula>Mechanical_Completion_Act__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Required Certification of MC Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Required_Certification_of_MC__c</fullName>
        <label>Required Certification of MC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Schedule_Items__c</fullName>
        <label>Schedule Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Install DAS</fullName>
                </value>
                <value>
                    <fullName>Install Erosion Controls</fullName>
                </value>
                <value>
                    <fullName>Install Modules</fullName>
                </value>
                <value>
                    <fullName>Install Posts</fullName>
                </value>
                <value>
                    <fullName>Install Racking</fullName>
                </value>
                <value>
                    <fullName>Install Roads</fullName>
                </value>
                <value>
                    <fullName>Pour Equipment Pad</fullName>
                </value>
                <value>
                    <fullName>Set Inverter</fullName>
                </value>
                <value>
                    <fullName>Set Switchgear</fullName>
                </value>
                <value>
                    <fullName>Set Transformer</fullName>
                </value>
                <value>
                    <fullName>Site Work/Grading</fullName>
                </value>
                <value>
                    <fullName>Trenching</fullName>
                </value>
                <value>
                    <fullName>Wire Inverter/Switchgear/Transformer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scheduled_Mechanical_Completion_Date__c</fullName>
        <label>Scheduled Mechanical Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Engineer__c</fullName>
        <label>Site Engineer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Mobilization__c</fullName>
        <label>Site Mobilization</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_Preparation__c</fullName>
        <label>Site Preparation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substantial_Completion_Act__c</fullName>
        <label>Substantial Completion Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substantial_Completion_Est__c</fullName>
        <label>Substantial Completion Est</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Superintendent_Construction_Manager__c</fullName>
        <label>Superintendent/Construction Manager</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size_MWdc__c</fullName>
        <label>System Size (MWdc)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Weekly_Project_Meetings__c</fullName>
        <label>Weekly Project Meetings</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Actual_Date__c</fullName>
        <formula>Project__r.Current_Estimated_Witness_Test_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Witness Test Actual Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Anticipated_Date__c</fullName>
        <formula>Project__r.Estimated_Witness_test_date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Witness Test Anticipated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Completion_Act__c</fullName>
        <label>Witness Test  Completion Act</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Witness_Test_Completion_Est__c</fullName>
        <label>Witness Test Completion Est</label>
        <type>Date</type>
    </fields>
    <label>Construction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Construction Page Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Construction</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>